--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,5 +3,11 @@ name = "lauzhack-2025"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.10"
-dependencies = []
+requires-python = ">=3.13"
+dependencies = [
+    "audioop-lts>=0.2.2",
+    "elevenlabs>=2.24.0",
+    "numpy>=2.2.6",
+    "pydub>=0.25.1",
+    "python-dotenv>=1.2.1",
+]
