--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,7 @@ dependencies = [
     "dotenv>=0.9.9",
     "openai>=2.8.1",
     "opencv-python>=4.12.0.88",
+    "pynput>=1.7.7",
+    "sounddevice>=0.5.0",
+    "soundfile>=0.13.0",
 ]
