--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,4 +15,6 @@ dependencies = [
     "pynput>=1.7.7",
     "sounddevice>=0.5.0",
     "soundfile>=0.13.0",
+    "fastapi>=0.121.3",
+    "uvicorn>=0.38.0",
 ]
