--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,48 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "audioop-lts>=0.2.2",
-    "elevenlabs>=2.24.0",
     "numpy>=2.2.6",
     "pydub>=0.25.1",
     "python-dotenv>=1.2.1",
-    "dotenv>=0.9.9",
     "openai>=2.8.1",
     "opencv-python>=4.12.0.88",
+    "pillow>=12.0.0",
+    "sam3",
+    "einops>=0.8.1",
+    "triton-windows<3.6",
+    "decord>=0.6.0",
+    "pycocotools>=2.0.10",
+    "psutil>=7.1.3",
+    "huggingface-hub[cli]>=1.1.5",
+    "matplotlib>=3.10.7",
+    "pandas>=2.3.3",
+    "scikit-image>=0.25.2",
+    "scikit-learn>=1.7.2",
+    "torch>=2.9.1",
+    "torchvision>=0.24.1",
 ]
+
+[[tool.uv.index]]
+name = "pytorch-gpu"
+url = "https://download.pytorch.org/whl/cu130"
+explicit = true
+
+
+[tool.uv.sources]
+torchvision = [
+  { index = "pytorch-gpu"},
+]
+torch = [
+  { index = "pytorch-gpu"},
+]
+sam3 = { workspace = true, editable = true }
+
+[tool.uv.workspace]
+members = [
+    "sam3",
+]
+
+[tool.uv]
+override-dependencies = ["numpy>=2.2.6"]
+
+
