--- a/ui/package.json
+++ b/ui/package.json
@@ -7,10 +7,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next build && next export",
-    "electron": "electron .",
+    "export": "next build",
+    "electron": "npm run export && electron .",
     "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:3000 && electron .\"",
-    "electron:build": "next build && electron-builder"
+    "electron:build": "npm run export && electron-builder"
   },
   "dependencies": {
     "next": "^14.0.4",
