--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "scikit-learn>=1.7.2",
     "torch>=2.9.1",
     "torchvision>=0.24.1",
+    "fastapi[standard]>=0.121.3",
 ]
 
 [[tool.uv.index]]
