chore: ignore UI build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ node_modules/
 # Keep Electron/Next workspace modules out of git
 ui/node_modules/
 .next/
+# Build outputs from UI/Electron
+ui/out/
+ui/dist-electron/
 # audio files
 *.mp3
 *.m4a
