--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "torch>=2.9.1",
     "torchvision>=0.24.1",
     "fastapi[standard]>=0.121.3",
+    "requests>=2.32.5",
 ]
 
 [[tool.uv.index]]
