--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,18 @@
 uv.lock
+.python-version
+.DS_Store
+.idea/
+.vscode/
+/node_modules
+/dist
+/build
+/tmp
+.pytest_cache/
+coverage/
+*.log
+*.tmp
+*.swp
+
 # audio files
 *.mp3
 *.m4a
@@ -23,6 +37,7 @@ lib/
 lib64/
 parts/
 sdist/
+.next/
 var/
 wheels/
 share/python-wheels/
@@ -187,9 +202,9 @@ cython_debug/
 .abstra/
 
 # Visual Studio Code
-#  Visual Studio Code specific template is maintained in a separate VisualStudioCode.gitignore 
+#  Visual Studio Code specific template is maintained in a separate VisualStudioCode.gitignore
 #  that can be found at https://github.com/github/gitignore/blob/main/Global/VisualStudioCode.gitignore
-#  and can be added to the global gitignore or merged into this file. However, if you prefer, 
+#  and can be added to the global gitignore or merged into this file. However, if you prefer,
 #  you could uncomment the following to ignore the entire vscode folder
 # .vscode/
 
