--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "torchvision>=0.24.1",
     "fastapi[standard]>=0.121.3",
     "requests>=2.32.5",
+    "ultralytics>=8.3.230",
 ]
 
 [[tool.uv.index]]
