--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "soundfile>=0.13.0",
     "fastapi>=0.121.3",
     "uvicorn>=0.38.0",
+    "pyzmq>=26.2.0",
 ]
 
 [[tool.uv.index]]
