--- a/ui/package.json
+++ b/ui/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "next": "^14.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zeromq": "^6.1.2"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
