--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "use-debounce": "^10.0.6",
     "zeromq": "^6.1.2"
   },
   "devDependencies": {
